# finn-bruktbil

./: .env.example  .gitignore  PRICE_MODEL.md  README.md  analyze.ipynb  cli-analyze.py  cli-download-data.py  cli-fetch-ids.py  output.csv  progress.md  pyproject.toml  s-output-100-200.csv  s-output-100.csv  s-output-200-400.csv  s-output.csv  scrape-articles.py  scrape-ids.py  scrape2.ipynb  test_price_model.py
.devcontainer/: devcontainer.json  postCreateCommand.sh
configs/: analyze.json  download.json  fetch.json
data/: ids.json
finnbruktbil/: __init__.py  __main__.py  analysis_app.py  aux_data_parser.py  browser.py  db.py  prompt.md  scraper.py
finnbruktbil/cli/: __init__.py  analyze.py  config.py  download_data.py  fetch_ids.py
misc/: sample_ad.html  sample_key_info.html
