[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finnbruktbil"
version = "0.1.0"
dependencies = [
    "selenium",
    "webdriver-manager",
    "tqdm",
    "pandas",
    "streamlit",
    "pydantic",
    "plotly",
    "scikit-learn>=1.0", # For OLS regression and metrics
    "numpy>=1.20", # For numerical computations
    "openai",  # For auxiliary data parsing
    "python-dotenv",  # For .env file support
]

[project.scripts]
finnbruktbil = "finnbruktbil.cli:main"

[tool.setuptools]
packages = ["finnbruktbil", "finnbruktbil.cli"]
